# term1_SkyBank

./: .coverage  .env  README.md  pyproject.toml  requirements.txt
src/: external_api.py  main.py  main_dict_.json  reports.py  services.py  spending_by_category.json  utils.py  views.py  xlsx_to_json.json
tests/: conftest.py  test_external_api.py  test_reports.py  test_services.py  test_utils.py  user_settings.json
